@@ -18,6 +18,7 @@
 
 	* libfreeipmi/src/ipmi-sdr-record-types.c,
 	libfreeipmi/src/ipmi-sdr-repo-cache.c,
+	libfreeipmi/src/ipmi-sensor-event-messages.c,
 	libfreeipmi/src/ipmi-sdr-repo-cmds.c,
 	libfreeipmi/src/ipmi-sol-cmds.c, libfreeipmi/src/ipmi-pef-cmds.c,
 	libfreeipmi/src/ipmi-sensor-types.c,
